@@ -2,6 +2,8 @@ Important changes since GBBopen 1.3:
 
   * Changes to GBBopen Tools
      - New DOSUBLISTS macro
+     - New :all-numeric, :include-day, and :full-names arguments to 
+       FULL-DATE-AND-TIME
 
 
 Important changes in GBBopen 1.3:
